--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,25 +1,25 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
-  <div class="container">
+<div class="container">
     <h2 class="mt-4">Search Results for "{{ query }}"</h2>
     <div class="row">
-      {% for episode in results %}
+        {% for episode in results %}
         <div class="col-md-6">
-          <div class="card mb-3">
-            <img src="{{ episode['Thumbnail'] }}" class="card-img-top" alt="Episode Thumbnail">
-            <div class="card-body">
-              <h5 class="card-title">{{ episode['Episode Title'] }}</h5>
-              <p class="card-text">
-                <small class="text-muted">Rating: {{ episode['Rating'] }} - Air Date: {{ episode['Air Date'] }}
-                  - Runtime: {{ episode['Runtime'] }} - Episode: {{ snum }}{{ episode['Episode Number'] }}</small>
-              </p>
-              <p class="card-text">{{ episode['Episode Description'] }}</p>
-              <a href="{{ url_for('video', video_uuid=episode['uuid']) }}" class="btn btn-primary btn-block" target="_blank">Watch</a>
+            <div class="card mb-3">
+                <img src="{{ episode['Thumbnail'] }}" class="card-img-top" alt="Episode Thumbnail">
+                <div class="card-body">
+                    <h5 class="card-title">{{ episode['Episode Title'] }}</h5>
+                    <p class="card-text">
+                        <small class="text-muted">Rating: {{ episode.get('Rating', '') }} - Air Date: {{ episode.get('Air Date', '') }}
+                            - Runtime: {{ episode.get('Runtime', '') }} - Episode: {{ episode.get('Season', '') }}x{{ episode['Episode Number'] }}</small>
+                    </p>
+                    <p class="card-text">{{ episode.get('Episode Description', '')|safe }}</p>
+                    <a href="{{ url_for('video', video_uuid=episode.get('uuid', '')) }}" class="btn btn-primary btn-block" target="_blank">Watch</a>
+                </div>
             </div>
-          </div>
         </div>
-      {% endfor %}
+        {% endfor %}
     </div>
-  </div>
+</div>
 {% endblock %}
