--- a/static/custom.css
+++ b/static/custom.css
@@ -1,3 +1,16 @@
 body {
     background-color: #FFD700; /* Simpsons yellow color code */
 }
+
+@font-face {
+    font-family: 'Homer Simpson Revised';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Homer Simpson Revised'), url(https://fonts.cdnfonts.com/s/48464/Homer_Simpson_Revised.woff) format('woff');
+}
+
+/* Custom CSS for the navbar */
+.simpsons-navbar {
+    background-color: #00b0ff; /* Simpsons blue */
+    font-family: 'Homer Simpson Revised', sans-serif; /* Use the Homer Simpson Revised font with a fallback */
+}
