--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
 {% block content %}
 <div class="text-center">
-    <img src="static/images/simfamily.png" alt="Simpsons Image" class="img-fluid">
+    <img src="{{ url_for('static', filename='images/simfamily.png') }}" alt="Simpsons Image" class="img-fluid">
     <blockquote class="blockquote mt-4">
-        <p class="mb-0">{{ quote }}</p>
+        <p class="mb-0">{{ quote|safe }}</p>
         <footer class="blockquote-footer">{{ character }}</footer>
     </blockquote>
 </div>
