--- a/templates/video.html
+++ b/templates/video.html
@@ -1,9 +1,22 @@
+<!-- templates/video.html -->
 {% extends "base.html" %}
 
 {% block content %}
 <div class="container">
-    <div class="embed-responsive embed-responsive-16by9">
-        <iframe src="{{ video_url }}" class="embed-responsive-item" allowfullscreen frameborder="0" allow="fullscreen"></iframe>
+    <div class="row">
+        <!-- Video iframe on the left side (col-lg-8) -->
+        <div class="col-lg-8">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe src="{{ video_url }}" class="embed-responsive-item" allowfullscreen frameborder="0" allow="fullscreen"></iframe>
+            </div>
+        </div>
+
+        <!-- Chat application on the right side (col-lg-4) -->
+        <div class="col-lg-4">
+            <div class="chat-container" style="height: 100%;">
+                <iframe src="https://webchat.freenode.net/?channels=#NoBullShitSimpsons" style="border:0; width:100%; height:100%;"></iframe>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
