--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-    <h2 class="mt-4">Search Results for "{{ query }}"</h2>
+    <h2 class="mt-4">Search Results for "<span class="text-blue">{{ query }}</span>"</h2>
     <div class="row">
         {% for episode in results %}
         <div class="col-md-6">
