--- a/templates/video.html
+++ b/templates/video.html
@@ -1,8 +1,7 @@
-<!-- templates/video.html -->
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
+<div class="container video-container"> <!-- Add the "video-container" class here -->
     <div class="row">
         <!-- Video iframe on the left side (col-lg-8) -->
         <div class="col-lg-8">
