--- a/templates/season.html
+++ b/templates/season.html
@@ -2,17 +2,16 @@
 
 {% block content %}
 <div class="container">
-    <h2 class="mt-4">Season {{ season_number }}</h2>
     <div class="row">
         {% for episode in season_data %}
-        <div class="col-md-6">
-            <div class="card mb-3">
+        <div class="col-md-6 mb-4">
+            <div class="card shadow"> <!-- Add 'shadow' class here -->
                 <img src="{{ episode['Thumbnail'] }}" class="card-img-top" alt="Episode Thumbnail">
-                <div class="card-body">
+                <div class="card-body" style="height: 100%;">
                     <h5 class="card-title">{{ episode['Episode Title'] }}</h5>
                     <p class="card-text">
                         <small class="text-muted">Rating: {{ episode.get('Rating', '') }} - Air Date: {{ episode.get('Air Date', '') }}
-                  - Runtime: {{ episode.get('Runtime', '') }} - Episode: {{ season_number }}x{{ episode['Episode Number'] }}</small>
+                            - Runtime: {{ episode.get('Runtime', '') }} - Episode: {{ season_number }}x{{ episode['Episode Number'] }}</small>
                     </p>
                     <p class="card-text">{{ episode.get('Episode Description', '')|safe }}</p>
                     <a href="{{ url_for('video', video_uuid=episode.get('uuid', '')) }}" class="btn btn-primary btn-block" target="_blank">Watch</a>
