--- a/templates/seasons.html
+++ b/templates/seasons.html
@@ -1,23 +1,26 @@
 {% extends "base.html" %}
 
 {% block content %}
- <div class="row">
+<div class="container">
+    <div class="row">
         {% for season in seasons_data %}
         <div class="col-md-6 mb-4">
-            <div class="card">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="{{ season['Poster'] }}" class="card-img rounded-left" alt="Season Image">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title font-weight-bold">Season {{ season['Season'] }}</h5>
-                            <p class="card-text small">{{ season['rating'] }} - {{ season['Year'] }} - {{ season['Episodes'] }} Episodes</p>
-                            <p class="card-text">{{ season['Overview'] }}</p>
+            <a href="/season/{{ season['Season'] }}" class="card-link"> <!-- Add 'href' and 'card-link' class here -->
+                <div class="card shadow">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="{{ season['Poster'] }}" class="card-img rounded-left img-fluid" alt="Season {{ season['Season'] }} Image">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title font-weight-bold">Season {{ season['Season'] }}</h5>
+                                <p class="card-text small">{{ season['rating'] }} - {{ season['Year'] }} - {{ season['Episodes'] }} Episodes</p>
+                                <p class="card-text">{{ season['Overview'] }}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
         {% endfor %}
     </div>
