--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
     <!-- Preload custom fonts (example) -->
     <link rel="preload" as="font" href="path-to-your-font.woff" type="font/woff" crossorigin="anonymous">
 
+    <!-- Favicon -->
+    <link rel="icon" href="https://i.pinimg.com/originals/b0/9d/89/b09d8964573bee9b39a281a908a323fe.png" type="image/png">
+
     <!-- Add other preloads here -->
 </head>
 <body>
