--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="text-center">
-    <img src="{{ url_for('static', filename='images/simfamily.png') }}" alt="Simpsons Image" class="img-fluid">
+    <img src="/static/images/simfamily.png" alt="Simpsons Image" class="img-fluid">
     <blockquote class="blockquote mt-4">
         <p class="mb-0">{{ quote|safe }}</p>
         <footer class="blockquote-footer">{{ character }}</footer>
