--- a/templates/video.html
+++ b/templates/video.html
@@ -13,9 +13,13 @@
         <!-- Chat application on the right side (col-lg-4) -->
         <div class="col-lg-4">
             <div class="chat-container" style="height: 100%;">
-                <iframe src="https://webchat.freenode.net/?channels=#NoBullShitSimpsons" style="border:0; width:100%; height:100%;"></iframe>
+                <iframe src="https://kiwiirc.hybridirc.com/?nick=SimpsonsFan??&theme=Dark&#NoBullShitSimpsons" style="border:0; width:100%; height:100%;"></iframe>
             </div>
         </div>
     </div>
 </div>
+<div class="commentbox" style="margin-top: 20px;"></div>
+<script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
+<script>commentBox('5736567322705920-proj')</script>
+
 {% endblock %}
