--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,10 @@
     <link rel="icon" href="https://i.pinimg.com/originals/b0/9d/89/b09d8964573bee9b39a281a908a323fe.png"
           type="image/png">
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
     <!-- Custom CSS for suggestions -->
     <style>
         .dropdown-item {
