--- a/templates/season.html
+++ b/templates/season.html
@@ -5,12 +5,12 @@
     <div class="row">
         {% for episode in season_data %}
         <div class="col-md-6 mb-4">
-            <div class="card shadow" style="height: 127px; margin-bottom: 20px;">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="{{ episode['Thumbnail'] }}" class="card-img rounded-left img-fluid" alt="Episode {{ episode['Episode Number'] }} Image" style="width: 227px; height: 127px; object-fit: cover;">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="d-flex flex-row">
+                    <div class="card-img-container">
+                        <img src="{{ episode['Thumbnail'] }}" alt="Episode {{ episode['Episode Number'] }} Image" class="card-img img-fluid h-100">
                     </div>
-                    <div class="col-md-8">
+                    <div class="card-details">
                         <div class="card-body">
                             <h5 class="card-title font-weight-bold" style="max-width: 200px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><a href="{{ url_for('video', video_uuid=episode.get('uuid', '')) }}" class="card-link">{{ episode['Episode Title'] }}</a></h5>
                             <p class="card-text small">Rating: {{ episode.get('Rating', '') }} - Air Date: {{ episode.get('Air Date', '') }}
